# e_student

./: .gitignore  Cargo.toml  Rocket.toml  tailwind.config.js
migrations/2023-04-20-110501_users/: up.sql
migrations/2023-04-25-094139_sessions/: up.sql
migrations/2023-04-29-110805_courses/: up.sql
migrations/2023-04-29-113240_enrolments/: down.sql  up.sql
migrations/2023-04-29-143514_point_assignments/: down.sql  up.sql
migrations/2023-04-29-145030_grade_assignments/: down.sql  up.sql
migrations/2023-05-02-064919_grade_assignments_progress/: down.sql  up.sql
migrations/2023-05-02-065601_point_assignments_progress/: down.sql  up.sql
migrations/2023-05-14-125233_users-delete-cascade/: down.sql  up.sql
migrations/2023-05-14-130738_courses-delete-cascade/: down.sql  up.sql
migrations/2023-06-27-134638_base/: down.sql  up.sql
src/: application.rs  assignment.rs  base_layout_context.rs  catchers.rs  course.rs  database.rs  discussion.rs  error.rs  handlebars.rs  index.rs  localization.rs  mail.rs  main.rs  models.rs  schema.rs  user.rs  util.rs
src/components/: users.rs
src/routes/: course.rs  courses.rs  index.rs  locale.rs  login.rs  logout.rs  mod.rs  overview.rs  root.rs
templates/: base.html.hbs
templates/catchers/: not_found.html.hbs
templates/components/: button.html.hbs  button_link.html.hbs  button_link_table.html.hbs  button_table.html.hbs  caption.html.hbs  cell_text.html.hbs  cell_text_gray.html.hbs  checkbox.html.hbs  error.html.hbs  gradebar.html.hbs  input_base.html.hbs  input_base_text.html.hbs  input_cell_base.html.hbs  input_cell_base_text.html.hbs  input_cell_grade.html.hbs  input_cell_point.html.hbs  input_cell_select.html.hbs  input_cell_text.html.hbs  input_number.html.hbs  input_password.html.hbs  input_select.html.hbs  input_select_account_type.html.hbs  input_select_sort.html.hbs  input_text.html.hbs  (+8 more)
(+53 files in other folders)
