[package]
name = "e_student"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
chrono = "0.4.24"
diesel = { version = "2.0.4", features = ["chrono", "mysql"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
env_logger = "0.10.0"
handlebars = "4.3.7"
hex = "0.4.3"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls", "tracing"] }
log = "0.4.17"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["tls"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_mysql_pool"] }
serde = { version = "1.0.160", features = ["serde_derive"] }
translitrs = "0.2.2"
